测试结束，apk没有消息和朋友接口。这部分有待测试
