# docs/swagger.yaml
@@ -59,11 +59,11 @@ definitions:
         type: integer
       follower_count:
         type: integer
+      id:
+        type: integer
       is_follow:
         type: boolean
-      user_id:
-        type: integer
-      user_name:
+      name:
         type: string
     type: object
   controllers.UserInfoResponse:
